# C-labs

.github/workflows/: CI.yml
hw-01_bmp/: Makefile
hw-01_bmp/include/: bmp.h  stego.h
hw-01_bmp/src/: bmp.c  main.c  stego.c
hw-02_huffman/: CMakeLists.txt  Makefile
hw-02_huffman/include/: huffman.h
hw-02_huffman/src/: huffman.cpp  main.cpp
hw-02_huffman/test/: test.cpp
lab-01_makefile/: Makefile
lab-01_makefile/include/: algorithm.h  io.h  util.h
lab-01_makefile/src/: algorithm.c  io.c  main.c  util.c
lab-02_cstrings/: Makefile
lab-02_cstrings/include/: str.h  test_str.h
lab-02_cstrings/src/: str.c  test.c  test_str.c
lab-03_mergesort/: Makefile
lab-03_mergesort/include/: mergesort.h
lab-03_mergesort/src/: main.c  main.cpp  mergesort.c  mergesort.cpp
lab-04_intrusive-list/: Makefile
lab-04_intrusive-list/include/: clist.h
lab-04_intrusive-list/src/: clist.c  main.c
lab-05_c-io/: Makefile
lab-05_c-io/include/: clist.h  point_list.h
lab-05_c-io/src/: clist.c  main.c  point_list.c
lab-05_c-io/tests/: 00-print-txt.test.args
lab-06_int-vector/: Makefile
lab-06_int-vector/src/: my_vector.cpp
lab-07_matrix/: Makefile
lab-07_matrix/include/: matrix.h
lab-07_matrix/src/: matrix.cpp
lab-08_shared-ptr/include/: matrix.hpp
lab-08_shared-ptr/src/: matrix.cpp  shared_ptr.cpp
lab-09_figures/include/: Circle.hpp  Figure.hpp  Rectangle.hpp  Scheme.hpp
lab-09_figures/src/: Circle.cpp  Figure.cpp  Rectangle.cpp  (+1 more)
lab-10_cppio/: Makefile
lab-11_vector/: Makefile  main.cpp
lab-12_exceptions/: Makefile
lab-13_array/: Makefile
(+15 files in other folders)
